Issue_Embeddings/deployment/ingress.yaml
# TODO(https://github.com/kubeflow/code-intelligence/issues/76): We shouldn't
# expose the service behind an ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ml-gh-issuefeat
  namespace: issuefeat
  annotations:
    kubernetes.io/ingress.global-static-ip-name: issuefeat-api
    networking.gke.io/managed-certificates: gh-issue-labeler-certificate-3
spec:
  backend:
    serviceName: ml-github-issuefeat
    servicePort: 3000
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ml-github-issuefeat
          servicePort: 3000
  tls:
    - hosts:
      - embeddings.gh-issue-labeler.com
      secretName: predict-issuefeat-tls
